--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
         - WAIT_LOGGER_LEVEL=debug
         - WAIT_TIMEOUT=90
         - WAIT_HOSTS=mongodb-primary:27017
-        - SPRING_PROFILES_ACTIVE=test,manage-root-user,init-demo-database
+        - SPRING_PROFILES_ACTIVE=test,manage-root-user-token-auth,init-demo-database
         - CIS_ROOT_AUTHENTICATION_TOKEN_JSON=[{\"name\":\"root-token-1\",\"expiration\":\"2024-12-31\"}]
       ports:
         - "8081:8080"
@@ -41,7 +41,7 @@ services:
         - WAIT_LOGGER_LEVEL=debug
         - WAIT_TIMEOUT=90
         - WAIT_HOSTS=mongodb-primary:27017
-        - SPRING_PROFILES_ACTIVE=test,manage-root-user,init-demo-database
+        - SPRING_PROFILES_ACTIVE=test,init-work-activity-type,init-shop-group
         - CWM_ROOT_AUTHENTICATION_TOKEN_JSON=[{\"name\":\"root-token-1\",\"expiration\":\"2024-12-31\"}]
       ports:
         - "8082:8080"
