--- a/nginx.conf
+++ b/nginx.conf
@@ -7,20 +7,13 @@ http {
     sendfile on;
     client_max_body_size 100M;
 
-    upstream core-inventory {
-        server core-inventory:8080;
-    }
- 
-    upstream core-work {
-        server core-work:8080;
-    }
- 
     server {
         listen 80;
- 
+        resolver 127.0.0.11 valid=30s;
         location ~* ^/api/cis/(.*)$ {
+            set $upstream core-inventory:8080;
             rewrite ^/api/cis/(.*) /$1 break;
-            proxy_pass         http://core-inventory;
+            proxy_pass         http://$upstream;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
@@ -30,8 +23,9 @@ http {
             proxy_set_header   X-Forwarded-Prefix /api/cis;
         }
         location ~* ^/api/cwm/(.*)$ {
+            set $upstream core-work:8080;
             rewrite ^/api/cwm/(.*) /$1 break;
-            proxy_pass         http://core-work;
+            proxy_pass         http://$upstream;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
@@ -40,13 +34,17 @@ http {
             proxy_set_header   X-Forwarded-Proto $scheme;
             proxy_set_header   X-Forwarded-Prefix /api/cwm;
         }
-        # location / {
-        #     proxy_pass         http://docker-frontend;
-        #     proxy_redirect     off;
-        #     proxy_set_header   Host $host;
-        #     proxy_set_header   X-Real-IP $remote_addr;
-        #     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header   X-Forwarded-Host $server_name;
-        # }
+        location ~* ^/api/elog/(.*)$ {
+            set $upstream elog:8080;
+            rewrite ^/api/elog/(.*) /$1 break;
+            proxy_pass         http://$upstream;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-Prefix /api/elog;
+        }
     }
 }
