--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,7 +46,7 @@ services:
         - WAIT_LOGGER_LEVEL=debug
         - WAIT_TIMEOUT=90
         - WAIT_HOSTS=mongodb-primary:27017
-        - SPRING_PROFILES_ACTIVE=test,init-work-activity-type,init-shop-group
+        - SPRING_PROFILES_ACTIVE=test,init-work-activity-type,init-shop-group,elog-support
         - CWM_ROOT_AUTHENTICATION_TOKEN_JSON=[{\"name\":\"root-token-1\",\"expiration\":\"2024-12-31\"}]
         - CWM_CIS_URL=http://core-inventory:8080
       ports:
