--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,14 +42,16 @@ services:
       restart: on-failure
       environment:
         - CWM_MONGODB_URI=mongodb://cwm:cwm@mongodb-primary:27017/cwm?authSource=cwm
-        - CWM_ADMIN_MONGODB_URI=mongodb://admin:admin@mongodb-primary:27017/?authSource=admin
+        - CWM_ADMIN_MONGODB_URI=mongodb://admin:admin@mongodb-primary:27017/?authSource=admin        
+        - CWM_ROOT_AUTHENTICATION_TOKEN_JSON=[{\"name\":\"root-token-1\",\"expiration\":\"2024-12-31\"}]
+        - CWM_CIS_URL=http://core-inventory:8080
+        - CWM_ELOG_URL=http://elog:8080
+        - CWM_KAFKA_BOOTSTRAP=kafka:9092
         - WAIT_LOGGER_LEVEL=debug
         - WAIT_TIMEOUT=90
         - WAIT_HOSTS=mongodb-primary:27017
         - SPRING_PROFILES_ACTIVE=test,init-work-activity-type,init-shop-group,elog-support
-        - CWM_ROOT_AUTHENTICATION_TOKEN_JSON=[{\"name\":\"root-token-1\",\"expiration\":\"2024-12-31\"}]
-        - CWM_CIS_URL=http://core-inventory:8080
-        - CWM_ELOG_URL=http://elog:8080
+
       ports:
         - "8082:8080"
       depends_on:
