add frontend to docker/nginx

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -130,3 +130,10 @@ services:
         - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
       depends_on:
         - zookeeper
+
+    frontend:
+      build:
+        context: core-suite-frontend
+        args:
+            - API_ENDPOINT=/api/cis
+            - API_ENDPOINT=/api/cwm
