--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,10 @@ http {
     sendfile on;
     client_max_body_size 100M;
 
+    upstream docker-frontend {
+        server frontend:80;
+    }
+
     server {
         listen 80;
         resolver 127.0.0.11 valid=30s;
@@ -45,6 +49,14 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
             proxy_set_header   X-Forwarded-Proto $scheme;
             proxy_set_header   X-Forwarded-Prefix /api/elog;
+        }
+        location / {
+            proxy_pass         http://docker-frontend;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
 }
