--- a/nginx.conf
+++ b/nginx.conf
@@ -7,8 +7,13 @@ http {
     sendfile on;
     client_max_body_size 100M;
 
-    upstream docker-frontend {
-        server frontend:80;
+    # Define upstreams for the frontends
+    upstream core-inventory-frontend {
+        server core-inventory-frontend:3000;
+    }
+
+    upstream core-work-frontend {
+        server core-work-frontend:3001;
     }
 
     server {
@@ -50,13 +55,35 @@ http {
             proxy_set_header   X-Forwarded-Proto $scheme;
             proxy_set_header   X-Forwarded-Prefix /api/elog;
         }
+        
+        # Proxy rules for core-inventory frontend
+        location /core-inventory {
+            proxy_pass http://core-inventory-frontend;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
+
+        # Proxy rules for core-work frontend
+        location /core-work {
+            proxy_pass http://core-work-frontend;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
+
+        # Default proxy rules (fallback)
         location / {
-            proxy_pass         http://docker-frontend;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_pass http://core-inventory-frontend;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
         }
     }
 }
