--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -132,6 +132,9 @@ services:
         - zookeeper
 
     core-inventory-frontend:
+      profiles:
+        - "cis"
+        - "all-service"
       image: ghcr.io/eed-web-application/core-inventory-system-frontend:latest
       ports:
         - "3000:3000"
@@ -141,6 +144,9 @@ services:
         - core-inventory
 
     core-work-frontend:
+      profiles:
+        - "cwm"
+        - "all-service"
       image: ghcr.io/eed-web-application/core-work-management-frontend:latest
       ports:
         - "3001:3000"
